2011-10-11  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] Suddenly, things are crashing sporadically.

        * platform/chromium/test_expectations.txt: Document the crashes.

2011-10-11  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] fast/js/regexp-overflow.html is slow everywhere.

        * platform/chromium/test_expectations.txt: Widened platform specifiers.

2011-10-11  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] Mark more flakes as flakes.

        * platform/chromium/test_expectations.txt: Marked flakes.

2011-10-11  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: implement IDBFactory.cmp method
        https://bugs.webkit.org/show_bug.cgi?id=62293

        Reviewed by Tony Chang.

        Check for IDBFactory.deleteDatabase (NYI) marked as FAIL. crbug.com/72002
        Tests for array keys (NYI) marked as FAIL. crbug.com/99876
        Tests for invalid key exception types marked as FAIL. crbug.com/98930

        * storage/indexeddb/factory-basics-expected.txt:
        * storage/indexeddb/factory-basics.html:

2011-10-11  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] Unbarf Win testers after ambiguous expectations were added in r97149.

        * platform/chromium/test_expectations.txt: Made expectation more specific.

2011-10-11  Dominic Mazzoni  <dmazzoni@google.com>

        [Chromium] Fix expectations for two accessibility tests.
        https://bugs.webkit.org/show_bug.cgi?id=69827

        These tests were never run on Chromium before, so they're not new
        failures. aria-roles had different expectations on different Mac
        platforms, but on Chromium the results will always be the same, so
        added Chromium-specific expectations. image-map-update-parent is
        timing out, the cause here is unclear but it was never running before
        so there's no new bug.

        Unreviewed.

        * platform/chromium/accessibility/aria-roles-expected.txt: Added.