@@ -1,0 +1,10 @@
+
+This tests that changing the value of a menu list sends a notification even when it's not popped open.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+Got notification: MenuListValueChanged
+
+TEST COMPLETE
+
